--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <div id="button"><a href="./pages/dashboard_admin.html">Dashboard Admin</a></div>
+          <div id="button"><a href="./pages/dashboard_cliente.html">Dashboard Cliente</a></div>
+          <div id="button"><a href="./pages/dashboard_gerenteventas.html">Dashboard Gerente de Ventas</a></div>
         </form>
         </div>
     </div>
