Actualizacion de las vistas admin,usuario y gerente

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <form class="form-signin">
           <h2 class="form-signin-heading">Please sign in</h2>
           <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+          <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
           <h1> </h1>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
@@ -44,15 +44,13 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-          <div id="button"><a href="./pages/dashboard_admin.html">Dashboard Admin</a></div>
+          <div id="button"><a href="./pages/dashboard_admin_overview.html">Dashboard Admin</a></div>
           <div id="button"><a href="./pages/dashboard_cliente.html">Dashboard Cliente</a></div>
           <div id="button"><a href="./pages/dashboard_gerenteventas.html">Dashboard Gerente de Ventas</a></div>
         </form>
         </div>
     </div>
   
-
-
   <!-- /container -->
 
   <!-- Bootstrap core JavaScript
