--- a/pages/dashboard_admin_reportes.html
+++ b/pages/dashboard_admin_reportes.html
@@ -40,8 +40,12 @@
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <!-- Logout button  -->
+            <form align="right" name="form1" method="post" action="log_out.php">
+              <label class="logoutLblPos">
+              <input name="submit2" type="submit" id="submit2" value="Sign out">
+              </label>
+            </form>
           </form>
         </div>
       </nav>
@@ -64,33 +68,15 @@
         </nav>
 
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-          <!-- <h1>Dashboard Admin</h1> -->
-
-          <!-- <section class="row text-center placeholders">
-            <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <div class="text-muted">Something else</div>
-            </div>
-            <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-          </section> -->
-
+          
+          <div class="wrapper">
+          <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar reporte</button></div>
+          <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar reporte</button></div>
+          <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar reporte</button></div>
+          </div>
+          
           <h2>Reportes generados recientemente</h2>
-          <div class="table-responsive">
+            <div class="table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -133,9 +119,6 @@
               </tbody>
             </table>
             <div class = "container" align = "center">
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar reporte</button></div>
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar reporte</button></div>
-                <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar reporte</button></div>
                 </div>
           </div>
         </main>
