--- a/pages/dashboard_admin_usuarios.html
+++ b/pages/dashboard_admin_usuarios.html
@@ -41,8 +41,12 @@
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <!-- Logout button  -->
+            <form align="right" name="form1" method="post" action="log_out.php">
+                <label class="logoutLblPos">
+                <input name="submit2" type="submit" id="submit2" value="Sign out">
+                </label>
+              </form>
           </form>
         </div>
       </nav>
