--- a/pages/dashboard_admin_overview.html
+++ b/pages/dashboard_admin_overview.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Dashboard Admin</title>
+    <title>Dashboard Administrador</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -42,11 +42,11 @@
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <!-- Logout button  -->
-            <form align="right" name="form1" method="post" action="log_out.php">
-                <label class="logoutLblPos">
-                <input name="submit2" type="submit" id="submit2" value="Sign out">
-                </label>
-              </form>
+            <form align="right" name="form1" method="post" action="../index.html">
+              <label class="logoutLblPos">
+              <input name="submit2" type="submit" id="submit2" value="Sign out">
+              </label>
+            </form>
           </form>
         </div>
       </nav>
@@ -57,7 +57,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="./dashboard_admin_overview.html">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./dashboard_admin_usuarios.html">Usuarios</a>
@@ -69,7 +69,7 @@
         </nav>
 
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-          <h1>Dashboard Administrador</h1>
+          <h1>Bienvenido, Jorge Soto Bravo</h1>
 
           <section class="row text-center placeholders" >
             <div class="col-6 col-sm-3 placeholder" >
