--- a/pages/dashboard_admin_reportes.html
+++ b/pages/dashboard_admin_reportes.html
@@ -41,7 +41,7 @@
           </ul>
           <form class="form-inline mt-2 mt-md-0">
               <!-- Logout button  -->
-            <form align="right" name="form1" method="post" action="log_out.php">
+            <form align="right" name="form1" method="post" action="../index.html">
               <label class="logoutLblPos">
               <input name="submit2" type="submit" id="submit2" value="Sign out">
               </label>
