--- a/pages/dashboard_admin_usuarios.html
+++ b/pages/dashboard_admin_usuarios.html
@@ -42,7 +42,7 @@
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <!-- Logout button  -->
-            <form align="right" name="form1" method="post" action="log_out.php">
+            <form align="right" name="form1" method="post" action="../index.html">
                 <label class="logoutLblPos">
                 <input name="submit2" type="submit" id="submit2" value="Sign out">
                 </label>
@@ -60,7 +60,7 @@
               <a class="nav-link" href="./dashboard_admin_overview.html">Overview </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Usuarios<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="./dashboard_admin_usuarios.html">Usuarios<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./dashboard_admin_reportes.html">Reportes</a>
