Implementacion de mas botonesy algunas formas

--- a/pages/dashboard_admin_overview.html
+++ b/pages/dashboard_admin_overview.html
@@ -41,7 +41,7 @@
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
-            <!-- Logout button  -->
+            <!--\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ Logout button //////////////////////////////////////////////////////////////// -->
             <form align="right" name="form1" method="post" action="../index.html">
               <label class="logoutLblPos">
               <input name="submit2" type="submit" id="submit2" value="Sign out">
@@ -70,20 +70,6 @@
 
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
           <h1>Bienvenido, Jorge Soto Bravo</h1>
-
-          <section class="row text-center placeholders" >
-            <div class="col-6 col-sm-3 placeholder" >
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail" >
-              <h4>Usuarios</h4>
-              <div class="text-muted">registrados</div>
-            </div>
-
-            <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-          </section>
 
           <h2>Usuarios modificados recientemente</h2>
           <div class="table-responsive">
