--- a/pages/dashboard_admin_usuarios.html
+++ b/pages/dashboard_admin_usuarios.html
@@ -70,7 +70,11 @@
 
 
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-          
+            <section class="row text-center placeholders">
+                 <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar usuario</button></div>
+                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar usuario</button></div>
+                <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar usuario</button></div> 
+                </section>
 
           <h2>Lista de usuarios</h2>
           <div class="table-responsive">
@@ -116,11 +120,6 @@
                 </tr>
               </tbody>
             </table>
-            <div class = "container" align = "center">
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar usuario</button></div>
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar usuario</button></div>
-                <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar usuario</button></div>
-                </div>
           </div>
         </main>
       </div>
@@ -133,5 +132,7 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../../../../assets/js/vendor/popper.min.js"></script>
     <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
 </html>
