--- a/pages/dashboard_cliente_ordenes.html
+++ b/pages/dashboard_cliente_ordenes.html
@@ -26,7 +26,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Epade</a>
+      <a class="navbar-brand" href="./dashboard_cliente_overview.html">Epade</a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="">Agregar usuario <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
+            <a class="nav-link" href="#">Modificar usuario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="#">Eliminar usuario</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Help</a>
@@ -68,6 +68,13 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+            <!-- <section class="row text-center placeholders">
+             
+                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar usuario</button></div>
+               <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar usuario</button></div>
+               <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar usuario</button></div> 
+            
+               </section> -->
           <h2>Ordenes recientes</h2>
           <div class="table-responsive">
             <table class="table table-striped">
