--- a/pages/dashboard_gerenteventas_camiones.html
+++ b/pages/dashboard_gerenteventas_camiones.html
@@ -79,12 +79,12 @@
         </nav>
         
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-            <div class = "container" align = "left">
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar usuario</button></div>
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar usuario</button></div>
-                <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar usuario</button></div>
-                </div>
-                <div class= "container" align = "right"><h1>Dashboard Gerente de ventas</h1></div> 
+            <section class="row text-center placeholders">
+                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar camión</button></div>
+                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Buscar camión</button></div>
+               <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar camión</button></div>
+               <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar camión</button></div> 
+               </section>
 
           <h2>Ultimas ordenes recibidas</h2>
           <div class="table-responsive">
