--- a/pages/dashboard_gerenteventas_listas.html
+++ b/pages/dashboard_gerenteventas_listas.html
@@ -79,7 +79,7 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard Gerente de ventas</h1>
+          <h1>Listas</h1>
 
           <h2>Ultimas ordenes recibidas</h2>
           <div class="table-responsive">
