--- a/pages/dashboard_gerenteventas_ordenes.html
+++ b/pages/dashboard_gerenteventas_ordenes.html
@@ -79,7 +79,13 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard Gerente de ventas</h1>
+                <section class="row text-center placeholders">
+                        <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Crear orden</button></div>
+                        <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Buscar orden</button></div>
+                       <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar orden</button></div>
+                       <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar orden</button></div> 
+                       </section>
+          <h1>Nueva orden</h1>
           <!-- Include Bootstrap Combobox -->
 <link rel="stylesheet" href="/vendor/bootstrap-combobox/css/bootstrap-combobox.css">
 
