--- a/pages/dashboard_gerenteventas_reportes.html
+++ b/pages/dashboard_gerenteventas_reportes.html
@@ -79,9 +79,15 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard Gerente de ventas</h1>
+          <h1>Reportes</h1>
+          <section class="row text-center placeholders">
+              <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Generar reporte</button></div>
+              <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Buscar reporte</button></div>
+             <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar reporte</button></div>
+             <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar reporte</button></div> 
+             </section>
 
-          <h2>Ultimas ordenes recibidas</h2>
+          <h2>Ultimos reportes generados</h2>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
