Actualizacion de vistas existentes y creacion de vista almacen.

--- a/pages/dashboard_gerenteventas_overview.html
+++ b/pages/dashboard_gerenteventas_overview.html
@@ -34,23 +34,12 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
+          
         </ul>
           <!-- Logout button  -->
           <form align="right" name="form1" method="post" action="../index.html">
             <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="Sign out">
+              <input type="submit" class="btn btn-primary" value="Sign out">
             </label>
           </form>
       </div>
@@ -79,7 +68,7 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard Gerente de ventas</h1>
+          <h1>Bienvenido, Jorge Soto Bravo</h1>
 
           <h2>Ultimas ordenes recibidas</h2>
           <div class="table-responsive">
