--- a/index.html
+++ b/index.html
@@ -30,23 +30,24 @@
 
     <div class="jumbotron vertical-center">                     
       <div class="container" align="center">
-        <h1><b> Welcome to Epade </b></h1>
+        <h1><b> Bienvenido a Epade </b></h1>
         <form class="form-signin">
-          <h2 class="form-signin-heading">Please sign in</h2>
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
+          <h3 class="form-signin-heading">Por favor inicie sesión</h3>
+          <label for="inputEmail" class="sr-only">Username</label>
+          <input type="username" id="inputusr" class="form-control" placeholder="Usuario" required autofocus>
           <h1> </h1>
           <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+          <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
           <div class="checkbox">
             <label>
-              <input type="checkbox" value="remember-me"> Remember me
+              <input type="checkbox" value="remember-me"> Recordarme
             </label>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesión</button>
           <div id="button"><a href="./pages/dashboard_admin_overview.html">Dashboard Admin</a></div>
           <div id="button"><a href="./pages/dashboard_cliente_overview.html">Dashboard Cliente</a></div>
           <div id="button"><a href="./pages/dashboard_gerenteventas_overview.html">Dashboard Gerente de Ventas</a></div>
+          <div id="button"><a href="./pages/dashboard_almacen_overview.html">Dashboard Almacen</a></div>
         </form>
         </div>
     </div>
