--- a/pages/dashboard_cliente_ordenes.html
+++ b/pages/dashboard_cliente_ordenes.html
@@ -32,22 +32,11 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="">Agregar usuario <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Modificar usuario</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Eliminar usuario</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
+        <ul class="navbar-nav mr-auto"></ul>>
+  
           <form align="right" name="form1" method="post" action="../index.html">
             <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="Sign out">
+              <input type="submit" class="btn btn-primary" value="Sign out">
             </label>
           </form>
         </ul>
