--- a/pages/dashboard_cliente_overview.html
+++ b/pages/dashboard_cliente_overview.html
@@ -33,21 +33,10 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
+          
           <form align="right" name="form1" method="post" action="../index.html">
             <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="Sign out">
+              <input type="submit" class="btn btn-primary" value="Sign out">
             </label>
           </form>
         </ul>
