--- a/pages/dashboard_gerenteventas_camiones.html
+++ b/pages/dashboard_gerenteventas_camiones.html
@@ -1,154 +1,267 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
 
-    <title>Dashboard Gerente de ventas</title>
-    
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../../../favicon.ico">
 
-    <!-- Custom styles for this template -->
-    <link href="../css/dashboard_gerenteventas_camiones.css" rel="stylesheet">
-  </head>
+  <title>Dashboard Gerente de ventas</title>
 
-  <body>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  <!-- Custom styles for this template -->
+  <link href="../css/dashboard_gerenteventas_camiones.css" rel="stylesheet">
+</head>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Epade</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    crossorigin="anonymous"></script>
+
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Epade</a>
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto"></ul>
+      <!-- Logout button  -->
+      <form align="right" name="form1" method="post" action="../index.html">
+        <label class="logoutLblPos">
+          <input type="submit" class="btn btn-primary" value="Sign out">
+        </label>
+      </form>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link" href="./dashboard_gerenteventas_overview.html">Overview </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
+            <a class="nav-link" href="./dashboard_gerenteventas_ordenes.html">Ordenes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="./dashboard_gerenteventas_listas.html">Listas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
+            <a class="nav-link active" href="./dashboard_gerenteventas_camiones.html">Camiones
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./dashboard_gerenteventas_reportes.html">Reportes</a>
           </li>
         </ul>
-          <!-- Logout button  -->
-          <form align="right" name="form1" method="post" action="../index.html">
-            <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="Sign out">
-            </label>
-          </form>
-      </div>
-    </nav>
+      </nav>
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="./dashboard_gerenteventas_overview.html">Overview </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./dashboard_gerenteventas_ordenes.html">Ordenes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./dashboard_gerenteventas_listas.html">Listas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./dashboard_gerenteventas_camiones.html">Camiones<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./dashboard_gerenteventas_reportes.html">Reportes</a>
-            </li>
-          </ul>
-        </nav>
-        
-        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-            <section class="row text-center placeholders">
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar camión</button></div>
-                <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Buscar camión</button></div>
-               <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar camión</button></div>
-               <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar camión</button></div> 
-               </section>
-
-          <h2>Ultimas ordenes recibidas</h2>
-          <div class="table-responsive">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                  <td>ipsum</td>
-                  <td>dolor</td>
-                  <td>sit</td>
-                </tr>
-                <tr>
-                  <td>1,002</td>
-                  <td>amet</td>
-                  <td>consectetur</td>
-                  <td>adipiscing</td>
-                  <td>elit</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>Integer</td>
-                  <td>nec</td>
-                  <td>odio</td>
-                  <td>Praesent</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>libero</td>
-                  <td>Sed</td>
-                  <td>cursus</td>
-                  <td>ante</td>
-                </tr>
-                <tr>
-                  <td>1,004</td>
-                  <td>dapibus</td>
-                  <td>diam</td>
-                  <td>Sed</td>
-                  <td>nisi</td>
-                </tr>
-              </tbody>
-            </table>
+      <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+        <div class="wrapper text-center">
+          <div class="btn-group">
+            <div class="button">
+              <button onclick="addTruck()" class="btn btn-lg btn-primary btn-block" type="submit">Agregar camión</button>
+            </div>
+            <div class="button">
+              <button onclick="modifyTruck()" class="btn btn-lg btn-primary btn-block" type="submit">Modificar camión</button>
+            </div>
+            <div class="button">
+              <button onclick="deleteTruck()" class="btn btn-lg btn-primary btn-block" type="submit">Eliminar camión</button>
+            </div>
           </div>
-        </main>
-      </div>
+        </div>
+        <!--//////////////////////////////// Boton para agregar camion \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
+        <div id="addTruck" class="hidden justify-content-center">
+
+          <div class="jumbotron">
+
+            <div class="form-group">
+              <label for="sel1">Seleccione tipo de cuenta a crear:</label>
+              <select class="form-control" id="sel1" placeholder="Seleccione">
+                <option>Chofer</option>
+                <option>Cliente</option>
+                <option>Encargado de Almacen</option>
+                <option>Gerente de ventas</option>
+              </select>
+            </div>
+            <label for="Sexo">Sexo:</label> &ensp;
+            <label class="radio-inline">
+              <input type="radio" name="optradio">Hombre</label> &ensp;
+            <label class="radio-inline">
+              <input type="radio" name="optradio">Mujer</label>
+
+            <div class="form-group">
+              <label for="usr">Nombres:</label>
+              <input type="text" class="form-control" id="nombres">
+            </div>
+
+            <div class="form-group">
+              <label for="usr">Apellidos:</label>
+              <input type="text" class="form-control" id="apellidos">
+            </div>
+
+            <div class="form-group">
+              <label for="usr">Cédula:</label>
+              <input type="text" class="form-control" placeholder="00-0000000-0" id="cedula">
+            </div>
+
+            <div class="form-group">
+              <label for="usr">Nombre de Usuario:</label>
+              <input type="text" class="form-control" id="user">
+            </div>
+
+            <div class="form-group">
+              <label for="pwd">Contraseña:</label>
+              <input type="password" class="form-control" id="pwd">
+            </div>
+
+            <div class="form-group">
+              <label for="pwd">Re-escriba la Contraseña:</label>
+              <input type="password" class="form-control" id="pwd">
+            </div>
+
+
+            <br>
+            <input class="btn btn-success buttonsubmit" type="submit" value="Submit">
+          </div>
+
+        </div>
+
+        <!--//////////////////////////////// Boton para modificar usuario \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
+
+        <div id="modifyTruck" class="hidden">
+
+          <input class="form-control" id="myInput" type="text" placeholder="Buscar..">
+
+        </div>
+
     </div>
 
-    <!-- Bootstrap core JavaScript
+    <!--//////////////////////////////// Boton para eliminar usuario \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\-->
+
+    <div id="deleteTruck" class="hidden">
+      <input class="form-control" id="myInput" type="text" placeholder="Buscar..">
+    </div>
+
+    <!--//////////////////// Script para boton agregar usuario, toggle hide/show \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+    <script>
+      function addTruck() {
+        var x = document.getElementById("addTruck");
+        if (x.style.display === "none") {
+          x.style.display = "block";
+        } else {
+          x.style.display = "none";
+        }
+      }
+    </script>
+    <!--//////////////////// Script para boton modificar usuario, toggle hide/show \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+    <script>
+      function modifyTruck() {
+        var x = document.getElementById("modifyTruck");
+        if (x.style.display === "none") {
+          x.style.display = "block";
+        } else {
+          x.style.display = "none";
+        }
+      }
+    </script>
+
+    <!--//////////////////// Script para boton eliminar usuario, toggle hide/show \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+
+    <script>
+            function deleteTruck() {
+              var x = document.getElementById("deleteTruck");
+              if (x.style.display === "none") {
+                x.style.display = "block";
+              } else {
+                x.style.display = "none";
+              }
+            }
+    </script>
+
+
+    <h2>Ultimas ordenes recibidas</h2>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Header</th>
+            <th>Header</th>
+            <th>Header</th>
+            <th>Header</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1,001</td>
+            <td>Lorem</td>
+            <td>ipsum</td>
+            <td>dolor</td>
+            <td>sit</td>
+          </tr>
+          <tr>
+            <td>1,002</td>
+            <td>amet</td>
+            <td>consectetur</td>
+            <td>adipiscing</td>
+            <td>elit</td>
+          </tr>
+          <tr>
+            <td>1,003</td>
+            <td>Integer</td>
+            <td>nec</td>
+            <td>odio</td>
+            <td>Praesent</td>
+          </tr>
+          <tr>
+            <td>1,003</td>
+            <td>libero</td>
+            <td>Sed</td>
+            <td>cursus</td>
+            <td>ante</td>
+          </tr>
+          <tr>
+            <td>1,004</td>
+            <td>dapibus</td>
+            <td>diam</td>
+            <td>Sed</td>
+            <td>nisi</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    </main>
+  </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+  <script src="../../../../assets/js/vendor/popper.min.js"></script>
+  <script src="../../../../dist/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../../../assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
