--- a/pages/dashboard_gerenteventas_reportes.html
+++ b/pages/dashboard_gerenteventas_reportes.html
@@ -34,23 +34,12 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
+         
         </ul>
           <!-- Logout button  -->
           <form align="right" name="form1" method="post" action="../index.html">
             <label class="logoutLblPos">
-            <input name="submit2" type="submit" id="submit2" value="Sign out">
+              <input type="submit" class="btn btn-primary" value="Sign out">
             </label>
           </form>
       </div>
@@ -79,13 +68,14 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Reportes</h1>
-          <section class="row text-center placeholders">
-              <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Generar reporte</button></div>
-              <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Buscar reporte</button></div>
-             <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar reporte</button></div>
-             <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar reporte</button></div> 
-             </section>
+        
+          <div class= "wrapper text-center">
+              <div class="btn-group">
+                  <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Agregar reporte</button></div>
+                 <div class="button"><button class="btn btn-lg btn-primary btn-block" type="submit">Modificar reporte</button></div>
+                 <div class= "button"><button class="btn btn-lg btn-primary btn-block" type="submit">Eliminar reporte</button></div> 
+             </div>
+          </div>
 
           <h2>Ultimos reportes generados</h2>
           <div class="table-responsive">
